re PR tree-optimization/41661 (ICE due to IPCP trying to create/fold a REAL typed comparision)

2009-10-13  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/41661
	* ipa-prop.c (compute_complex_pass_through): Allow only operations
	that are tcc_comparisons or do not change the type in any
	un-usleless way.
	* ipa-cp.c (ipcp_lattice_from_jfunc): Request boolean type when
	folding tcc_comparison operations.

	* testsuite/gcc.c-torture/compile/pr41661.c: New test.

From-SVN: r152702